Updated swagger bug for likes
